--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<title>Bootstrap实战</title>
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 <!-- 顶部导航栏 -->
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
 	<div class="container">
 		<!-- 小屏幕按钮导航和按钮 -->
 		<div class="navbar-header">
@@ -19,234 +18,218 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="index.html" class="navbar-brand">bootstrap</a>
+			<a href="index.html" class="navbar-brand">bootstrap-admin</a>
 		</div>
 		<!-- 大屏幕时显示的导航 -->
 		<div class="navbar-collapse collapse">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#home"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;后台首页</a></li>
+				<li><a href="#bbs"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;用户管理</a></li>
+				<li><a href="#html5"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;内容管理</a></li>
+				<li><a href="#cources"><span class="glyphicon glyphicon-tags"></span>&nbsp;&nbsp;标签管理</a></li>
+			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#home">首页</a></li>
-				<li><a href="#bbs">论坛</a></li>
-				<li><a href="#html5">前端开发</a></li>
-				<li><a href="#cources">最新课程</a></li>
-				<li><a href="#app">移动APP</a></li>
-				<li><a href="#contact">联系我们</a></li>
+				<li class="dropdown">
+					<a href="#" id="admin" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">admin<span class="caret"></span></a>
+					<ul class="dropdown-menu" aria-labelledby="admin">
+                        <li><a href="index.html"><span class="glyphicon glyphicon-screenshot"></span>&nbsp;&nbsp;前台首页</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;个人主页</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-cog"></span>&nbsp;&nbsp;个人设置</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-credit-card"></span>&nbsp;&nbsp;账户中心</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-heart"></span>&nbsp;&nbsp;我的收藏</a></li>
+                    </ul>
+				</li>
+				<li><a href="#"><span class="glyphicon glyphicon-off"></span>&nbsp;&nbsp;退出</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
-<!-- home区域 -->
-<section id="home">
-	<div class="lvjing">
-		<div class="container">
-			<div class="row wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-				<div class="col-md-1"></div>
-				<div class="col-md-10">
-					<h1>Bootstrap的联系</h1>
-					<p>这是来自于demo的模仿<br>这是文本2</p>
-					<img src="img/php.jpg" class="img-responsive" alt="php">
-				</div>
-				<div class="col-md-1"></div>
-			</div>
+<!-- 主体内容 -->
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="alert alert-danger alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                <h4>网站程序有漏洞，急需修复！</h4>
+                <p>当前版本程序(V1.22)存在严重安全问题，容易造成攻击，请即可修复！</p>
+                <p>
+                    <button type="button" class="btn btn-danger">立即修复</button>
+                    <button type="button" class="btn btn-default" data-dismiss="alert">稍后处理</button>
+                </p>
+            </div>
 		</div>
-	</div>
-</section>
-<!-- bbs -->
-<section id='bbs'>
-	<div class="container">
-		<div class="row wow bounceInUp" data-wow-offset="10">
-			<div class="col-md-4">
-				<a href="chenjiaobin.gihub.io" target="_blank">
-					<img src="img/a.png" class="img-responsive" alt="a">
-					<h3>Android开发</h3>
-					<p>Android开发技术交流，问题求助</p>
-				</a>
-			</div>
-			<div class="col-md-4">
-				<a href="chenjiaobin.gihub.io" target="_blank">
-					<img src="img/i.png" class="img-responsive" alt="b">
-					<h3>IOS开发</h3>
-					<p>IOS开发技术交流，问题求助</p>
-				</a>
-			</div>
-			<div class="col-md-4">
-				<a href="chenjiaobin.gihub.io" target="_blank">
-					<img src="img/b.png" class="img-responsive" alt="a">
-					<h3>嵌入式开发</h3>
-					<p>IOS开发技术交流，问题求助</p>
-				</a>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- html5 -->
-<section id="html5">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 wow fadeInLeft">
-				<h2>HTML5开发</h2>
-				<p>一线之神的前段开发工程师</p>
-				<p><span class="glyphicon glyphicon-education small-icon"></span>使用HTML5与CSS3技术轻松实现设备自适应展示。</p>
-				<p><span class="glyphicon glyphicon-education small-icon"></span>清晰明了的语义代码结构，更高的可读性、更利于页面维护的。</p>
-			</div>
-			<div class="col-md-6 wow fadeInRight">
-				<img src="img/html5.jpg" class="img-responsive" alt="html5">
-			</div>
-		</div>
-	</div>
-</section>
-<!-- bootstrap -->
-<section id="bootstrap">
-	<div class="container">
-		<div class="row wow fadeInUp">
-			<div class="col-md-6">
-				<img src="img/Bootstrap.jpg" class="img-responsive" alt="html5">
-			</div>
-			<div class="col-md-6">
-				<h2>Bootstrap是实战教程</h2>
-				<p>一线之神的前段开发工程师</p>
-				<p><span class="glyphicon glyphicon-education small-icon"></span>Bootstrap 是最受欢迎的 HTML、CSS 和 JS 架，用于开发响应式布局、移动设备优先的 WEB 项目。</p>
-				<p><span class="glyphicon glyphicon-education small-icon"></span>清晰明了的语义代码结构，更高的可读性、更利于页面维护的。</p>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- 课程列表 -->
-<section id="cources">
-	<div class="container">
-		<div class="row wow fadeIn" data-wow-delay="0.6">
-			<div class="col-md-12">
-				<h2>最新课程</h2>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="cource">
-					<img src="img/swift.jpg" alt="" class="img-responsive">
-					<a href="chenjiaobin.gihub.io" class="btn btn-primary" target="_blank">加入学习</a>
+		<div class="col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">网站数据统计</div>
+				<div class="panel-body">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>统计项目</th>
+								<th>昨日</th>
+								<th>今日</th>
+							</tr>
+						</thead>
+						<tbody>
+							 <tr>
+                                 <th scope="row">注册会员</th>
+                                 <td>200</td>
+                                 <td>400</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">登录会员</th>
+                                <td>4100</td>
+                                <td>5112</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">今日发帖</th>
+                                <td>1540</td>
+                                <td>4511</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">转载次数</th>
+                                <td>150</td>
+                                <td>110</td>
+                            </tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
-<!-- app下载 -->
-<section id="app">
-	<div class="container">
-		<div class="row wow fadeInUp">
-			<div class="col-md-6">
-				<h2>App下载</h2>
-				<p>全新UI交互，与新网站数据同步，更加丰富的课程，开启精彩无限，语音搜索课程，喊出你想要的课程，一件收藏，方便自己重复学习，离线下载课程，在哪儿都能开！</p>
-				<button class="btn btn-primary"><span class="glyphicon glyphicon-save download"></span>ipone版</button>
-				<button class="btn btn-primary"><span class="glyphicon glyphicon-save download"></span>Android版</button>
-			</div>
-			<div class="col-md-6">
-				<img src="img/app-banner.jpg" class="img-responsive" alt="">
+		<div class="col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">网站热帖</div>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<a href="index.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;高大上的网站<small class="pull-right">2015/08/08</small></a>
+					</li>
+					<li class="list-group-item">
+						<a href="index.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;高大上的网站<small class="pull-right">2015/08/08</small></a>
+					</li>
+					<li class="list-group-item">
+						<a href="index.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;高大上的网站<small class="pull-right">2015/08/08</small></a>
+					</li>
+					<li class="list-group-item">
+						<a href="index.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;高大上的网站<small class="pull-right">2015/08/08</small></a>
+					</li>
+					<li class="list-group-item">
+						<a href="index.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;高大上的网站<small class="pull-right">2015/08/08</small></a>
+					</li>
+					<li class="list-group-item">
+						<a href="index.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;高大上的网站<small class="pull-right">2015/08/08</small></a>
+					</li>
+				</ul>
 			</div>
 		</div>
-	</div>
-</section>
-<!-- contact -->
-<section id="contact">
-	<div class="lvjing">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 wow fadeInLeft">
-					<h2><span class="glyphicon glyphicon-send contact-icon"></span>联系kevin</h2>
-					<p>麦子学院是成都麦子信息技术有限公司旗下一个IT在线教育平台，目前已有30万注册用户，10万以上APP下载量，5000小时视频内容。 我们从不说空话，专注于IT在线教育，脱离传统教育的束缚，让你走哪学哪，想学就学。逗比的老师，贴心的助教，在这儿你能感受到来自五 湖四海伙伴们热情和踏实的学习态度！</p>
-					<address>
-						<p><span class="glyphicon glyphicon-home contact-icon"></span>地址：深圳市福田区</p>
-						<p><span class="glyphicon glyphicon-phone-alt contact-icon"></span>联系电话：11111111</p>
-						<p><span class="glyphicon glyphicon-envelope contact-icon"></span>邮箱:dfkdfjk@qq.com</p>
-					</address>
+		<div class="col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">今日访客统计</div>
+				<div class="panel-body">
+					<canvas id="canvas" class="col-md-12"></canvas>
 				</div>
-				<div class="col-md-6 wow fadeInRight">
-					<form action="" method="">
-						<div class="col-md-6">
-							<input type="text" class="form-control" placeholder="您的姓名">
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">服务器状态</div>
+				<div class="panel-body">
+					<p>内存使用率：40%</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+					</div>
+					<p>数据库使用率：60%</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+					</div>
+					<p>CPU使用率：20%</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
+					</div>
+					<p>磁盘使用率：30%</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">团队留言板</div>
+				<div class="panel-body">
+					<div class="col-md-7">
+						<div class="media well">
+							<div class="media-left"">
+								<a href="#">
+									<img class="media-object user-icon" src="img/a.png" alt="">
+								</a>
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">产品经理</h4>老王，今晚把网站升级一下
+							</div>
 						</div>
-						<div class="col-md-6">
-							<input type="email" class="form-control" placeholder="您的邮箱">
+						<div class="media well">
+							<div class="media-body text-right">
+								<h4 class="media-heading">产品经理</h4>老王，今晚把网站升级一下
+							</div>
+							<div class="media-right"">
+								<a href="#">
+									<img class="media-object user-icon" src="img/b.png" alt="">
+								</a>
+							</div>
 						</div>
-						<div class="col-md-12">
-							<input type="text" class="form-control" placeholder="标题">
+						<div class="media well">
+							<div class="media-left"">
+								<a href="#">
+									<img class="media-object user-icon" src="img/a.png" alt="">
+								</a>
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">产品经理</h4>老王，今晚把网站升级一下
+							</div>
 						</div>
-						<div class="col-md-12">
-							<textarea rows="4" class="form-control" placeholder="留言内容"></textarea>
+						<div class="media well">
+							<div class="media-body text-right">
+								<h4 class="media-heading">产品经理</h4>老王，今晚把网站升级一下
+							</div>
+							<div class="media-right">
+								<a href="#">
+									<img class="media-object user-icon" src="img/b.png" alt="">
+								</a>
+							</div>
 						</div>
-						<div class="col-md-8">
-							<input type="submit" class="form-control" value="提交">
-						</div>
-					</form>
+					</div>
+					<div class="col-md-5">
+						<form action="">
+							<div class="form-group">
+								<label for="txt">留言内容</label>
+								<textarea class="form-control" cols="10" rows="5" style="resize: none;" placeholder="输入留言内容"></textarea>
+							</div>
+							<button type="submit" class="btn btn-default mar-t15">留言</button>
+						</form>
+						<div class="panel panel-default">
+                            <div class="panel-heading">团队联系手册</div>
+                            <div class="panel-body">
+                                <ul class="list-group">
+                                    <li class="list-group-item">站长(李小龙)：<span class="glyphicon glyphicon-phone"></span>&nbsp;&nbsp;13134848615</li>
+                                    <li class="list-group-item">技术(大牛哥)：<span class="glyphicon glyphicon-phone"></span>&nbsp;&nbsp;13456127694</li>
+                                    <li class="list-group-item">推广(张二哥)：<span class="glyphicon glyphicon-phone"></span>&nbsp;&nbsp;13457815482</li>
+                                    <li class="list-group-item">客服(王女士)：<span class="glyphicon glyphicon-phone"></span>&nbsp;&nbsp;13134567782&nbsp;&nbsp;<span class="glyphicon glyphicon-phone-alt"></span>&nbsp;&nbsp;028-888888</li>
+                                </ul>
+                            </div>
+                        </div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- 底部	 -->
 <footer>
 	<p id="footer">Copyright © 2012-2015  chenjiaobin.githubio  蜀ICP备13014270号-4</p>
 </footer>
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="js/jquery.singlePageNav.min.js"></script>
-<script src="js/wow.min.js"></script>
-<!--  手机端 DevTools，方便调试用 -->
-<script src="//cdn.bootcss.com/eruda/1.2.4/eruda.min.js"></script>
-<script>
-	eruda.init();
-	$(document).ready(function(){
-		// 这个是外部插件，解决描点点击问题，点击锚点过度到指定的位置
-		// offset的是为了让页面不让顶部导航覆盖
-		$(".nav").singlePageNav({
-			offset:70
-		});
-		//这个是jquery的收缩的方法，只要点击小屏幕的导航，那么导航就会收缩
-		$(".navbar-collapse a").click(function(){
-			$(".navbar-collapse").collapse("hide");
-		})
-		// 这个是页面的动画效果
-		// 初始化
-		new WOW().init();
-	})
-</script>
+<script src="js/Chart.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
