--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<!-- 大屏幕时显示的导航 -->
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#home"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;后台首页</a></li>
-				<li><a href="#bbs"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;用户管理</a></li>
+				<li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;后台首页</a></li>
+				<li><a href="user-list.html"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;用户管理</a></li>
 				<li><a href="#html5"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;内容管理</a></li>
 				<li><a href="#cources"><span class="glyphicon glyphicon-tags"></span>&nbsp;&nbsp;标签管理</a></li>
 			</ul>
