--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 <script src="js/jquery.singlePageNav.min.js"></script>
 <script src="js/wow.min.js"></script>
 <!--  手机端 DevTools，方便调试用 -->
-<script src="//cdn.bootcss.com/eruda/1.2.4/eruda.min.js"></script>
+<!-- <script src="//cdn.bootcss.com/eruda/1.2.4/eruda.min.js"></script> -->
 <script>
-	eruda.init();
+	// eruda.init();
 	$(document).ready(function(){
 		// 这个是外部插件，解决描点点击问题，点击锚点过度到指定的位置
 		// offset的是为了让页面不让顶部导航覆盖
