--- a/user-list.html
+++ b/user-list.html
@@ -23,7 +23,7 @@
 		<!-- 大屏幕时显示的导航 -->
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="index.html"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;后台首页</a></li>
+				<li><a href="index-admin.html"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;后台首页</a></li>
 				<li class="active"><a href="user-list.html"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;用户管理</a></li>
 				<li><a href="content.html"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;&nbsp;内容管理</a></li>
 				<li><a href="tab.html"><span class="glyphicon glyphicon-tags"></span>&nbsp;&nbsp;标签管理</a></li>
