--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="index.html" class="navbar-brand">bootstrap</a>
+			<a href="index-admin.html" title="点击进入后台" class="navbar-brand">bootstrap</a>
 		</div>
 		<!-- 大屏幕时显示的导航 -->
 		<div class="navbar-collapse collapse">
