将jquery的连接改成https的cdn连接

--- a/index-admin.html
+++ b/index-admin.html
@@ -227,7 +227,7 @@
 <footer>
 	<p id="footer">Copyright © 2012-2015  chenjiaobin.githubio  蜀ICP备13014270号-4</p>
 </footer>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/Chart.js"></script>
 <script src="js/script.js"></script>
